--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="be97eb">  <td>23/06/20 13:53:05</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Employee_Time_Sheet.launchApp()[pri:0, instance:timesheet.Employee_Time_Sheet@54eb2b70]">&gt;&gt;launchApp</td> 
+<tr bgcolor="be97eb">  <td>23/07/03 13:18:24</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Configuration.launchApp()[pri:0, instance:attendance.Configuration@54eb2b70]">&gt;&gt;launchApp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@285377351</td>   <td></td> </tr>
-<tr bgcolor="be97eb">  <td>23/06/20 13:53:16</td>   <td>10693</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Employee_Time_Sheet.validationApp()[pri:0, instance:timesheet.Employee_Time_Sheet@54eb2b70]">validationApp</td> 
+<tr bgcolor="be97eb">  <td>23/07/03 13:18:39</td>   <td>14875</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Configuration.validationApp()[pri:0, instance:attendance.Configuration@54eb2b70]">validationApp</td> 
   <td>main@285377351</td>   <td></td> </tr>
-<tr bgcolor="be97eb">  <td>23/06/20 13:54:25</td>   <td>79837</td> <td>&nbsp;</td><td title="&lt;&lt;Employee_Time_Sheet.closeApp()[pri:0, instance:timesheet.Employee_Time_Sheet@54eb2b70]">&lt;&lt;closeApp</td> 
+<tr bgcolor="be97eb">  <td>23/07/03 13:18:51</td>   <td>26960</td> <td>&nbsp;</td><td title="&lt;&lt;Configuration.closeApp()[pri:0, instance:attendance.Configuration@54eb2b70]">&lt;&lt;closeApp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@285377351</td>   <td></td> </tr>
 </table>
